examples/bad/ZeroDivision.ml
(* Divide by 0 *)
let h = (1-1) in
let g = 4 / h in g